# bicameral-bot

./: .gitignore  .gitmodules  AGENTS.md  CONTEXT.md  Cargo.toml  LICENSE-APACHE  NOTICE  README.md
.github/workflows/: factory-attestation.yml  rust.yml
crates/bicameral-api/: Cargo.toml
crates/bicameral-api/src/: candidate.rs  dashboard.rs  event_store.rs  evidence.rs  governance.rs  lib.rs  review.rs  source.rs
crates/bicameral-audit/: Cargo.toml
crates/bicameral-audit/src/: lib.rs  receipt.rs  store.rs
crates/bicameral-config/: Cargo.toml
crates/bicameral-config/src/: lib.rs  paths.rs  schema.rs  workspace.rs
crates/bicameral-gateway/: Cargo.toml
crates/bicameral-gateway/src/: lib.rs  routes.rs  state.rs  static_assets.rs
crates/bicameral-mods/: Cargo.toml
crates/bicameral-mods/src/: lib.rs  manifest.rs  runner.rs  validate.rs
crates/bicameral-runtime/: Cargo.toml
crates/bicameral-runtime/src/: daemon.rs  governance.rs  lib.rs  service.rs
crates/bicameral-runtime/src/event_store_adapters/: drive_folder.rs  git.rs  memory.rs  mod.rs
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.svelte
dashboard/src/lib/: Legend.svelte  api.ts  types.ts
dashboard/src/pages/: IngestionGate.svelte  LedgerView.svelte
docs/adr/: 0001-local-daemon-and-gateway.md  0001-local-daemon-gateway-and-event-store-substrates.md  0002-agent-surfaces-and-bot-runtime-interface.md  0002-hitl-probabilistic-boundaries.md  0002-local-code-grounding.md  0003-local-code-grounding-and-cloud-conflict-boundary.md  0003-local-code-grounding-is-free.md  0003-protocol-folder-owned-by-bot.md  0004-hitl-boundaries-for-probabilistic-governance.md  0004-hitl-is-debt-control.md  0005-adopt-zeroclaw-runtime-scaffold.md  0005-separate-event-store-ingestion-review-and-policy.md  0006-minimal-ingestion-gate-and-ledger-view-ui.md  0007-substrate-neutral-governance-flow.md  0008-repository-split-and-protocol-transition.md  0009-adopt-zeroclaw-runtime-scaffold.md  0010-snapshot-scoped-local-code-graph-contract.md
docs/plans/: minimal-dependency-collision-check.md  zeroclaw-runtime-copy-extraction-v0.1.md
docs/research/: public-developer-survey-implications.md
docs/reviews/: pr-9-factory-handoff.md
docs/rfq/: ingest-integration-protocol-v0.1.md
protocol/: README.md
protocol/schemas/: README.md
runtime/: README.md  UPSTREAM-ZEROCLAW.md
scripts/: validate-factory-attestation.py
src/: main.rs
src/commands/: dashboard.rs  doctor.rs  gateway.rs  ingest.rs  init.rs  mod.rs  mods.rs  preflight.rs  review.rs  service.rs
