[package]
name = "bicameral-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Audit receipt recording for Bicameral governance actions"

[dependencies]
bicameral-api.workspace = true
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
uuid.workspace = true
tracing.workspace = true
