[package]
name = "bicameral-mods"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "EM-safe declarative mod manifests and fixture runner for Bicameral"

[dependencies]
bicameral-api.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true
